# casual-go

./: Caddyfile  Cargo.toml  Containerfile  README.md  casual-go.conf
src/: engine.rs  frame.rs  handlers.rs  lib.rs  main.rs  model.rs  packet.rs  session.rs  timer.rs
static/: game.html  index.html  lobby.html
static/css/: game.css  index.css  lobby.css
static/js/: board.js  game.js  lobby.js  timer.js
templates/: game.hbs  game.html  index.html  lobby.hbs
